--- a/coursera/sequence_models/week1/Dinosaurus_Island_character_level_language_nodel_final/Dinosaurus+Island+--+Character-level+language+model+-+%28final%29+-+learners.ipynb
+++ b/coursera/sequence_models/week1/Dinosaurus_Island_character_level_language_nodel_final/Dinosaurus+Island+--+Character-level+language+model+-+%28final%29+-+learners.ipynb
@@ -30,10 +30,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -57,11 +55,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 19909 total characters and 27 unique characters in your data.\n"
+     ]
+    }
+   ],
    "source": [
     "data = open('dinos.txt', 'r').read()\n",
     "data= data.lower()\n",
@@ -79,11 +83,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: '\\n', 1: 'a', 2: 'b', 3: 'c', 4: 'd', 5: 'e', 6: 'f', 7: 'g', 8: 'h', 9: 'i', 10: 'j', 11: 'k', 12: 'l', 13: 'm', 14: 'n', 15: 'o', 16: 'p', 17: 'q', 18: 'r', 19: 's', 20: 't', 21: 'u', 22: 'v', 23: 'w', 24: 'x', 25: 'y', 26: 'z'}\n"
+     ]
+    }
+   ],
    "source": [
     "char_to_ix = { ch:i for i,ch in enumerate(sorted(chars)) }\n",
     "ix_to_char = { i:ch for i,ch in enumerate(sorted(chars)) }\n",
@@ -143,10 +153,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "### GRADED FUNCTION: clip\n",
@@ -168,7 +176,7 @@
     "    ### START CODE HERE ###\n",
     "    # clip to mitigate exploding gradients, loop over [dWax, dWaa, dWya, db, dby]. (≈2 lines)\n",
     "    for gradient in [dWax, dWaa, dWya, db, dby]:\n",
-    "        None\n",
+    "        np.clip(gradient,-maxValue,maxValue,out=gradient)\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    gradients = {\"dWaa\": dWaa, \"dWax\": dWax, \"dWya\": dWya, \"db\": db, \"dby\": dby}\n",
@@ -178,11 +186,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gradients[\"dWaa\"][1][2] = 10.0\n",
+      "gradients[\"dWax\"][3][1] = -10.0\n",
+      "gradients[\"dWya\"][1][2] = 0.2971381536101662\n",
+      "gradients[\"db\"][4] = [10.]\n",
+      "gradients[\"dby\"][1] = [8.45833407]\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(3)\n",
     "dWax = np.random.randn(5,3)*10\n",
@@ -293,10 +311,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: sample\n",
@@ -321,12 +337,12 @@
     "    \n",
     "    ### START CODE HERE ###\n",
     "    # Step 1: Create the one-hot vector x for the first character (initializing the sequence generation). (≈1 line)\n",
-    "    x = None\n",
+    "    x = np.zeros((vocab_size,1))\n",
     "    # Step 1': Initialize a_prev as zeros (≈1 line)\n",
-    "    a_prev = None\n",
+    "    a_prev = np.zeros((n_a,1))\n",
     "    \n",
     "    # Create an empty list of indices, this is the list which will contain the list of indexes of the characters to generate (≈1 line)\n",
-    "    indices = None\n",
+    "    indices = []\n",
     "    \n",
     "    # Idx is a flag to detect a newline character, we initialize it to -1\n",
     "    idx = -1 \n",
@@ -340,25 +356,25 @@
     "    while (idx != newline_character and counter != 50):\n",
     "        \n",
     "        # Step 2: Forward propagate x using the equations (1), (2) and (3)\n",
-    "        a = None\n",
-    "        z = None\n",
-    "        y = None\n",
+    "        a = np.tanh(np.dot(Wax,x)+np.dot(Waa,a_prev)+b)\n",
+    "        z = np.dot(Wya,a) + by\n",
+    "        y = softmax(z)\n",
     "        \n",
     "        # for grading purposes\n",
     "        np.random.seed(counter+seed) \n",
     "        \n",
     "        # Step 3: Sample the index of a character within the vocabulary from the probability distribution y\n",
-    "        idx = None\n",
+    "        idx = np.random.choice(range(len(y)), p = y.ravel())\n",
     "\n",
     "        # Append the index to \"indices\"\n",
-    "        None\n",
+    "        indices.append(idx)\n",
     "        \n",
     "        # Step 4: Overwrite the input character as the one corresponding to the sampled index.\n",
-    "        x = None\n",
-    "        x[None] = None\n",
+    "        x = np.zeros((vocab_size, 1))\n",
+    "        x[idx] = 1\n",
     "        \n",
     "        # Update \"a_prev\" to be \"a\"\n",
-    "        a_prev = None\n",
+    "        a_prev = a\n",
     "        \n",
     "        # for grading purposes\n",
     "        seed += 1\n",
@@ -374,11 +390,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sampling:\n",
+      "list of sampled indices: [18, 2, 26, 0]\n",
+      "list of sampled characters: ['r', 'b', 'z', '\\n']\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(2)\n",
     "n, n_a = 20, 100\n",
@@ -466,10 +490,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: optimize\n",
@@ -504,16 +526,16 @@
     "    ### START CODE HERE ###\n",
     "    \n",
     "    # Forward propagate through time (≈1 line)\n",
-    "    loss, cache = None\n",
+    "    loss, cache = rnn_forward(X, Y, a_prev, parameters)\n",
     "    \n",
     "    # Backpropagate through time (≈1 line)\n",
-    "    gradients, a = None\n",
+    "    gradients, a = rnn_backward(X, Y, parameters, cache)\n",
     "    \n",
     "    # Clip your gradients between -5 (min) and 5 (max) (≈1 line)\n",
-    "    gradients = None\n",
+    "    gradients = clip(gradients,5)\n",
     "    \n",
     "    # Update parameters (≈1 line)\n",
-    "    parameters = None\n",
+    "    parameters = update_parameters(parameters, gradients, learning_rate)\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "    \n",
@@ -522,11 +544,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss = 126.50397572165339\n",
+      "gradients[\"dWaa\"][1][2] = 0.19470931534726663\n",
+      "np.argmax(gradients[\"dWax\"]) = 93\n",
+      "gradients[\"dWya\"][1][2] = -0.007773876032004546\n",
+      "gradients[\"db\"][4] = [-0.06809825]\n",
+      "gradients[\"dby\"][1] = [0.01538192]\n",
+      "a_last[4] = [-1.]\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(1)\n",
     "vocab_size, n_a = 27, 100\n",
@@ -688,13 +722,13 @@
     "        ### START CODE HERE ###\n",
     "        \n",
     "        # Use the hint above to define one training example (X,Y) (≈ 2 lines)\n",
-    "        index = None\n",
-    "        X = None\n",
-    "        Y = None\n",
+    "        index = j % len(examples)\n",
+    "        X = [None] + [char_to_ix[ch] for ch in examples[index]] \n",
+    "        Y = X[1:] + [char_to_ix[\"\\n\"]]\n",
     "        \n",
     "        # Perform one optimization step: Forward-prop -> Backward-prop -> Clip -> Update parameters\n",
     "        # Choose a learning rate of 0.01\n",
-    "        curr_loss, gradients, a_prev = None\n",
+    "        curr_loss, gradients, a_prev = optimize(X, Y, a_prev, parameters, learning_rate = 0.01)\n",
     "        \n",
     "        ### END CODE HERE ###\n",
     "        \n",
@@ -776,11 +810,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/huanghailong/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading text data...\n",
+      "Creating training set...\n",
+      "number of training examples: 31412\n",
+      "Vectorizing training set...\n",
+      "Loading model...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/huanghailong/anaconda3/lib/python3.6/site-packages/keras/engine/saving.py:304: UserWarning: Error in loading the saved optimizer state. As a result, your model is starting with a freshly initialized optimizer.\n",
+      "  warnings.warn('Error in loading the saved optimizer '\n"
+     ]
+    }
+   ],
    "source": [
     "from __future__ import print_function\n",
     "from keras.callbacks import LambdaCallback\n",
@@ -810,12 +871,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/1\n",
+      "31412/31412 [==============================] - 42s 1ms/step - loss: 2.7007\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0xb331e3a90>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print_callback = LambdaCallback(on_epoch_end=on_epoch_end)\n",
     "\n",
@@ -824,11 +903,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Write the beginning of your poem, the Shakespeare machine will complete it. Your input is: how i love\n",
+      "\n",
+      "\n",
+      "Here is your poem: \n",
+      "\n",
+      "how i love,\n",
+      "fil mor hesw thou widh dechel's this sich boun ow in where,\n",
+      "thy angules ons when price widy me all hit,\n",
+      "and them of that lee fo lo chourss the summer,\n",
+      "thou bur her ge buty with ans doth enthowed,\n",
+      "co show dost are bey the barcad were fidsh faunt,\n",
+      "thought thou time on hand when which chece no borad\n",
+      "a alf thou hers of forsant your ned)\n",
+      "und thy shill with thas ourty ald my fobsed,\n",
+      "thy beauty's lorse"
+     ]
+    }
+   ],
    "source": [
     "# Run this cell to try with different inputs without having to re-train the model \n",
     "generate_output()"
@@ -856,6 +955,13 @@
     "- This exercise took inspiration from Andrej Karpathy's implementation: https://gist.github.com/karpathy/d4dee566867f8291f086. To learn more about text generation, also check out Karpathy's [blog post](http://karpathy.github.io/2015/05/21/rnn-effectiveness/).\n",
     "- For the Shakespearian poem generator, our implementation was based on the implementation of an LSTM text generator by the Keras team: https://github.com/keras-team/keras/blob/master/examples/lstm_text_generation.py "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
