--- a/coursera/sequence_models/week3/machine_translation/Neural+machine+translation+with+attention+-+v1.ipynb
+++ b/coursera/sequence_models/week3/machine_translation/Neural+machine+translation+with+attention+-+v1.ipynb
@@ -17,9 +17,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -67,11 +67,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10000/10000 [00:00<00:00, 18613.41it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "m = 10000\n",
     "dataset, human_vocab, machine_vocab, inv_machine_vocab = load_dataset(m)"
@@ -79,11 +87,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('9 may 1998', '1998-05-09'),\n",
+       " ('10.09.70', '1970-09-10'),\n",
+       " ('4/28/90', '1990-04-28'),\n",
+       " ('thursday january 26 1995', '1995-01-26'),\n",
+       " ('monday march 7 1983', '1983-03-07'),\n",
+       " ('sunday may 22 1988', '1988-05-22'),\n",
+       " ('tuesday july 8 2008', '2008-07-08'),\n",
+       " ('08 sep 1999', '1999-09-08'),\n",
+       " ('1 jan 1981', '1981-01-01'),\n",
+       " ('monday may 22 1995', '1995-05-22')]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dataset[:10]"
    ]
@@ -103,11 +131,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X.shape: (10000, 30)\n",
+      "Y.shape: (10000, 10)\n",
+      "Xoh.shape: (10000, 30, 37)\n",
+      "Yoh.shape: (10000, 10, 11)\n"
+     ]
+    }
+   ],
    "source": [
     "Tx = 30\n",
     "Ty = 10\n",
@@ -139,11 +178,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Source date: 9 may 1998\n",
+      "Target date: 1998-05-09\n",
+      "\n",
+      "Source after preprocessing (indices): [12  0 24 13 34  0  4 12 12 11 36 36 36 36 36 36 36 36 36 36 36 36 36 36\n",
+      " 36 36 36 36 36 36]\n",
+      "Target after preprocessing (indices): [ 2 10 10  9  0  1  6  0  1 10]\n",
+      "\n",
+      "Source after preprocessing (one-hot): [[0. 0. 0. ... 0. 0. 0.]\n",
+      " [1. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " ...\n",
+      " [0. 0. 0. ... 0. 0. 1.]\n",
+      " [0. 0. 0. ... 0. 0. 1.]\n",
+      " [0. 0. 0. ... 0. 0. 1.]]\n",
+      "Target after preprocessing (one-hot): [[0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0.]\n",
+      " [1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0.]\n",
+      " [1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1.]]\n"
+     ]
+    }
+   ],
    "source": [
     "index = 0\n",
     "print(\"Source date:\", dataset[index][0])\n",
